--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -32,7 +32,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
@@ -46,7 +46,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
@@ -172,7 +172,7 @@
       </div>
       <div>
         <h3>2024</h3>
-        <p>Joseph Estep</p>
+        <p>Joseph Eastep</p>
         <p>William Kaufman</p>
       </div>
     </section>
