--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -30,7 +30,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
@@ -44,7 +44,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
