--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
@@ -46,7 +46,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
