--- a/troop-roster.html
+++ b/troop-roster.html
@@ -31,7 +31,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
@@ -45,7 +45,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
-        <a href="newsletter.html">Newsletter</a>
+        <!-- <a href="newsletter.html">Newsletter</a> -->
         <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
