--- a/events.html
+++ b/events.html
@@ -58,6 +58,243 @@
       <h2 class="section-title">Events</h2>
     </section>
     <section class="year">
+      <h2>Year 2025</h2>
+    </section>
+    <section class="center">
+    <div class="events">
+      <div class="left">
+        <div class="content">
+          <h3>January</h3>
+          <h4>Swimming Lock In/YMCA</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="Miami County YMCA - Robinson Branch">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>February</h3>
+          <h4>Pack 285 Crossover</h4>
+          <p>This event will be held at Saint John The Baptist Church in Tipp City, OH. At this event new scouts will cross over from Cub Scouts to Boy Scouts. Our scouts will be there to welcome them into the troop as they cross over the symbolic bridge.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.stjohntippcity.org/">
+          <div class="eventImg">
+            <img src="./assets/images/events/saint-john.jpg" alt="Saint John The Baptist Church">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>February</h3>
+          <h4>Scout Sunday</h4>
+          <p>This event will be held at the Church of the Scout's choice. Scout Sunday is an opportunity for scouts to attend services in uniform, conduct a flag ceremony, speak about Scouting, and present religious awards.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.vandaliaunitedmethodistchurch.com/">
+          <div class="eventImg">
+            <img src="./assets/images/events/vandalia-methodist.JPG" alt="Vandalia United Methodist Church">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>February</h3>
+          <h4>Escape Room/Camp Friedlander</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.facebook.com/CampFriedlander/">
+          <div class="eventImg">
+            <img src="./assets/images/events/friedlander.jpg" alt="Camp Friedlander">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>March</h3>
+          <h4>Scouting for Food/Tipp City</h4>
+          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected ?lbs of food for Needy Baskets food pantry.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://miamivalleybsa.org/program/scouting-for-food/">
+          <div class="eventImg">
+            <img src="./assets/images/events/scouting-for-food.png" alt="scouting for food">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>March</h3>
+          <h4>Sports Games/Cricket Holler</h4>
+          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected ?lbs of food for Needy Baskets food pantry.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.facebook.com/pages/Cricket-Holler-Boy-Scout-Camp/171675552896093">
+          <div class="eventImg">
+            <img src="./assets/images/events/cricket-holler.png" alt="Cricket Holler">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>April</h3>
+          <h4>Hiking and Backpacking/Twin Valley</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.metroparks.org/twin-valley-welcome-center/">
+          <div class="eventImg">
+            <img src="./assets/images/events/twin-valley.jpg" alt="Twin Valley Metropark">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>May</h3>
+          <h4>Aviation/TBD</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="">
+          <div class="eventImg">
+            <img src="./assets/images/to-be-named.JPG" alt="">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>May</h3>
+          <h4>Memorial Day Weekend/Tipp City</h4>
+          <p>On Saturday the scouts place flags on the graves of veterans at Maple Hill Cemetery. On Monday the scouts participate in the Memorial Day parade.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/">
+          <div class="eventImg memorial">
+            <img src="./assets/images/events/Memorial-day.jpg" alt="memorial day">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>June</h3>
+          <h4>Summer Camp/Summit Bechtel Reserve</h4>
+          <p>This years summer camp will be held at Summit Bechtel Reserve National Scout Camp in Glen Jean, WV. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 0 photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 1 photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 2 photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 3 photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 4 photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 5 photos</a>
+        </div>
+        <a href="https://www.summitbsa.org/">
+          <div class="eventImg">
+            <img src="./assets/images/events/Summit.jfif" alt="Summit Bechtel Reserve National Scout Camp">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>July</h3>
+          <h4>Paddle Sports/TBD</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="">
+          <div class="eventImg">
+            <img src="./assets/images/to-be-named.JPG" alt="">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>July</h3>
+          <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
+          <p>Court of honor is a troop event held to award the scouts all the different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://miamicountyymca.net/">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>August</h3>
+          <h4>Fishing/Chenoweth Trails</h4>
+          <p>The Fishing main event is held at Chenoweth Trails in Greenville, OH. The scouts put all of their fishing knowledge to the test as they attempt to catch fish (everyone catches a fish at this pond).</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.mattlight72.com/about-chenoweth-trails/">
+          <div class="eventImg">
+            <img src="./assets/images/events/chenoweth.jpg" alt="chenoweth trails">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>September</h3>
+          <h4>Mumfest/Tipp City</h4>
+          <p>Mum Fest is the big fundraiser of the year for the scouts. Starting in August the scouts begin selling mums to be painted on driveways. September begins the painting all the way up to Mum Fest. At Mum Fest the scouts run a Cobbler Booth.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://tippmumfestival.org/">
+          <div class="eventImg">
+            <img src="./assets/images/events/mum.jpg" alt="mum">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>October</h3>
+          <h4>Shooting Sports/Camp Friedlander</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://www.facebook.com/CampFriedlander/">
+          <div class="eventImg">
+            <img src="./assets/images/events/friedlander.jpg" alt="camp friedlander">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>November</h3>
+          <h4>Blacksmithing/TBD</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="">
+          <div class="eventImg">
+            <img src="./assets/images/to-be-named.JPG" alt="">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>December</h3>
+          <h4>Yearly Planning/Miami County YMCA - Robinson Branch</h4>
+          <p>The Yearly Planning event will be held at Cricket Holler Scout Camp in Dayton, OH. At this event the scouts plan all the next years events.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+        </div>
+        <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="Miami County YMCA - Robinson Branch">
+          </div>
+        </a>
+      </div>
+    </div>
+    </section>
+    <section class="main">
+      <div class="gallery" id="gallery3"></div>       
+      </section>
+      <br></br>
+    <section class="year">
       <h2>Year 2024</h2>
     </section>
     <section class="center">
@@ -215,7 +452,7 @@
           <h3>July</h3>
           <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
           <p>Court of honor is a troop event held to award the scouts all the different achievements they have earned. Whether it be merit badges, ranks, or roles, scouts have the chance at Court of Honor to be recognized for their achievements.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2(JCH24)">Click here to see photos</a>
+          <a href="#gallery1" onclick="renderEventPhotos2(JCH24)">Click here to see photos</a>
         </div>
         <a href="https://miamicountyymca.net/">
           <div class="eventImg">
