--- a/photos.html
+++ b/photos.html
@@ -58,32 +58,45 @@
       <h2 class="section-title">Photos</h2>
     </section>
     <section class="year">
+      <h2>Year 2025</h2>
+    </section>
+      <div class="category">
+        <a href="#gallery2" onclick="renderPhotos2()">Swimming Lock In</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Escape Room</a>
+      </div>
+    <section class="main">
+      <div class="gallery" id="gallery2"></div>       
+    </section>
+    <section class="year">
       <h2>Year 2024</h2>
     </section>
       <div class="category">
-        <a href="#gallery" onclick="renderPhotos(TOB24)">Tobogganing</a>
-        <a href="#gallery" onclick="renderPhotos(CO28524)">Pack 285 Crossover</a>
-        <a href="#gallery" onclick="renderPhotos(SS24)">Scout Sunday</a>
-        <a href="#gallery" onclick="renderPhotos(RLFA24)">Real Life First Aid</a>
-        <a href="#gallery" onclick="renderPhotos(SFF24)">Scouting For Food</a>
-        <a href="#gallery" onclick="renderPhotos(IFLY24)">Indoor Skydiving</a>
-        <a href="#gallery" onclick="renderPhotos(Fish24)">Fishing/Chenoweth Trails</a>
-        <a href="#gallery" onclick="renderPhotos(MD24)">Memorial Day</a>
-        <a href="#gallery" onclick="renderPhotos(Gaga24)">Gaga ball pit build</a>
-        <a href="#gallery" onclick="renderPhotos(SCD024)">Summer Camp Day 0</a>
-        <a href="#gallery" onclick="renderPhotos(SCD124)">Summer Camp Day 1</a>
-        <a href="#gallery" onclick="renderPhotos(SCD224)">Summer Camp Day 2</a>
-        <a href="#gallery" onclick="renderPhotos(SCD324)">Summer Camp Day 3</a>
-        <a href="#gallery" onclick="renderPhotos(SCD424)">Summer Camp Day 4</a>
-        <a href="#gallery" onclick="renderPhotos(SCD524)">Summer Camp Day 5</a>
-        <a href="#gallery" onclick="renderPhotos(PS24)">Paddle Sports</a>
-        <a href="#gallery" onclick="renderPhotos(JCH24)">July Court of Honor</a>
-        <a href="#gallery" onclick="renderPhotos(MC24)">Marengo Caves</a>
-        <a href="#gallery" onclick="renderPhotos(Mum24)">Mum Festival</a>
-        <a href="#gallery" onclick="renderPhotos(WS24)">Wilderness Survival</a>
-        <a href="#gallery" onclick="renderPhotos(TB24)">Turkey Bowl</a>
-        <a href="#gallery" onclick="renderPhotos(AP24)">Annual Planning</a>
+        <a href="#gallery1" onclick="renderPhotos1(TOB24)">Tobogganing</a>
+        <a href="#gallery1" onclick="renderPhotos1(CO28524)">Pack 285 Crossover</a>
+        <a href="#gallery1" onclick="renderPhotos1(SS24)">Scout Sunday</a>
+        <a href="#gallery1" onclick="renderPhotos1(RLFA24)">Real Life First Aid</a>
+        <a href="#gallery1" onclick="renderPhotos1(SFF24)">Scouting For Food</a>
+        <a href="#gallery1" onclick="renderPhotos1(IFLY24)">Indoor Skydiving</a>
+        <a href="#gallery1" onclick="renderPhotos1(Fish24)">Fishing/Chenoweth Trails</a>
+        <a href="#gallery1" onclick="renderPhotos1(MD24)">Memorial Day</a>
+        <a href="#gallery1" onclick="renderPhotos1(Gaga24)">Gaga ball pit build</a>
+        <a href="#gallery1" onclick="renderPhotos1(SCD024)">Summer Camp Day 0</a>
+        <a href="#gallery1" onclick="renderPhotos1(SCD124)">Summer Camp Day 1</a>
+        <a href="#gallery1" onclick="renderPhotos1(SCD224)">Summer Camp Day 2</a>
+        <a href="#gallery1" onclick="renderPhotos1(SCD324)">Summer Camp Day 3</a>
+        <a href="#gallery1" onclick="renderPhotos1(SCD424)">Summer Camp Day 4</a>
+        <a href="#gallery1" onclick="renderPhotos1(SCD524)">Summer Camp Day 5</a>
+        <a href="#gallery1" onclick="renderPhotos1(PS24)">Paddle Sports</a>
+        <a href="#gallery1" onclick="renderPhotos1(JCH24)">July Court of Honor</a>
+        <a href="#gallery1" onclick="renderPhotos1(MC24)">Marengo Caves</a>
+        <a href="#gallery1" onclick="renderPhotos1(Mum24)">Mum Festival</a>
+        <a href="#gallery1" onclick="renderPhotos1(WS24)">Wilderness Survival</a>
+        <a href="#gallery1" onclick="renderPhotos1(TB24)">Turkey Bowl</a>
+        <a href="#gallery1" onclick="renderPhotos1(AP24)">Annual Planning</a>
       </div>
+    <section class="main">
+      <div class="gallery" id="gallery1"></div>       
+    </section>
     <section class="year">
       <h2>Year 2023</h2>
     </section>
@@ -116,7 +129,7 @@
         <a href="#gallery" onclick="renderPhotos(DCH23)">December Court of Honor</a>
       </div>
     <section class="main">
-    <div class="gallery" id="gallery"></div>       
+        <div class="gallery" id="gallery"></div>       
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
