--- a/resources.html
+++ b/resources.html
@@ -131,7 +131,7 @@
     <section class="container">
       <div class="resources">
         <div class="forms">
-          <a href="./assets/docs/Troop_586_Code_of_Conduct-12-9-23.pdf">
+          <a href="./assets/docs/Troop 586 Code of Conduct 12.2024.pdf">
             <img src="./assets/images/code_of_connduct.PNG" alt="code of conduct">
           </a>
         </div>
@@ -140,7 +140,7 @@
     <section class="container">
       <div class="resources">
         <div class="forms">
-          <a href="./assets/docs/586_new_parent-2024.pdf">
+          <a href="./assets/docs/586_new_parent-2025.pdf">
             <img src="./assets/images/K.I.S.S..PNG" alt="new parent guide">
           </a>
         </div>
