--- a/photos.html
+++ b/photos.html
@@ -62,6 +62,7 @@
     </section>
       <div class="category">
         <a href="#gallery2" onclick="renderPhotos2()">Swimming Lock In</a>
+        <a href="#gallery2" onclick="renderPhotos2(CO28525)">Pack 285 Crossover</a>
         <a href="#gallery2" onclick="renderPhotos2()">Escape Room</a>
       </div>
     <section class="main">
