opened troop store

--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
     <section class="store">
       <div class="troop-store">
         <div>
-          <img id="logo" src="./assets/images/troop-store1.PNG" alt="troop 586 shirt with logo">
-          <img id="soup" src="./assets/images/troop-store2.PNG" alt="troop shirt with Soup The Turtle">
+          <img id="logo" src="./assets/images/Troop_Store/troop_shirt.png" alt="troop 586 shirt with logo">
+          <img id="soup" src="./assets/images/Troop_Store/troop_hoodie.png" alt="troop shirt with Soup The Turtle">
         </div>
-        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open until October 25th. Orders will be picked up by Mr. Luersman (Glen) once they are all completed. This is a great Christmas gift idea for you or relatives who would like to know what to get your scout.</p>
-        <img id="hat" src="./assets/images/troop-store3.PNG" alt="troop hat with logo">
+        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open until March 31st. Orders will be picked up by Mr. Luersman (Glen) once they are all completed. Please select pickup at checkout not delivery.</p>
+        <div id="hat">
+          <img id="" src="./assets/images/Troop_Store/troop_hat.png" alt="troop hat with logo">
+          <img id="" src="./assets/images/Troop_Store/troop_brim.png" alt="troop brim hat with logo">
+        </div>
       </div>
       <div class="store-link">
         <a href="https://stores.inksoft.com/troop_586/shop/home">Click here to visit the store</a>
