added scouting for food photos

--- a/photos.html
+++ b/photos.html
@@ -64,6 +64,7 @@
         <a href="#gallery2" onclick="renderPhotos2()">Swimming Lock In</a>
         <a href="#gallery2" onclick="renderPhotos2(CO28525)">Pack 285 Crossover</a>
         <a href="#gallery2" onclick="renderPhotos2()">Escape Room</a>
+        <a href="#gallery2" onclick="renderPhotos2(SFF25)">Scouting For Food</a>
       </div>
     <section class="main">
       <div class="gallery" id="gallery2"></div>       
