added photos for multiple events

--- a/events.html
+++ b/events.html
@@ -67,7 +67,7 @@
           <h3>January</h3>
           <h4>Swimming Lock In/YMCA</h4>
           <p></p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(SWIM25)">Click here to see photos</a>
         </div>
         <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
           <div class="eventImg">
@@ -80,7 +80,7 @@
           <h3>February</h3>
           <h4>Pack 285 Crossover</h4>
           <p>This event will be held at Saint John The Baptist Church in Tipp City, OH. At this event new scouts will cross over from Cub Scouts to Boy Scouts. Our scouts will be there to welcome them into the troop as they cross over the symbolic bridge.</p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(CO28525)">Click here to see photos</a>
         </div>
         <a href="https://www.stjohntippcity.org/">
           <div class="eventImg">
@@ -93,7 +93,7 @@
           <h3>February</h3>
           <h4>Scout Sunday</h4>
           <p>This event will be held at the Church of the Scout's choice. Scout Sunday is an opportunity for scouts to attend services in uniform, conduct a flag ceremony, speak about Scouting, and present religious awards.</p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(SS25)">Click here to see photos</a>
         </div>
         <a href="https://www.vandaliaunitedmethodistchurch.com/">
           <div class="eventImg">
@@ -106,7 +106,7 @@
           <h3>February</h3>
           <h4>Escape Room/Camp Friedlander</h4>
           <p></p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(ER25)">Click here to see photos</a>
         </div>
         <a href="https://www.facebook.com/CampFriedlander/">
           <div class="eventImg">
@@ -132,7 +132,7 @@
           <h3>March</h3>
           <h4>Sports Games/Cricket Holler</h4>
           <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected ?lbs of food for Needy Baskets food pantry.</p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(SG25)">Click here to see photos</a>
         </div>
         <a href="https://www.facebook.com/pages/Cricket-Holler-Boy-Scout-Camp/171675552896093">
           <div class="eventImg">
