--- a/photos.html
+++ b/photos.html
@@ -61,10 +61,12 @@
       <h2>Year 2025</h2>
     </section>
       <div class="category">
-        <a href="#gallery2" onclick="renderPhotos2()">Swimming Lock In</a>
+        <a href="#gallery2" onclick="renderPhotos2(SWIM25)">Swimming Lock In</a>
         <a href="#gallery2" onclick="renderPhotos2(CO28525)">Pack 285 Crossover</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Escape Room</a>
+        <a href="#gallery2" onclick="renderPhotos2(SS25)">Scout Sunday</a>
+        <a href="#gallery2" onclick="renderPhotos2(ER25)">Escape Room</a>
         <a href="#gallery2" onclick="renderPhotos2(SFF25)">Scouting For Food</a>
+        <a href="#gallery2" onclick="renderPhotos2(SG25)">Sports Games</a>
       </div>
     <section class="main">
       <div class="gallery" id="gallery2"></div>       
