multi events photos, roster update, counselor update, Eagle Scout update

--- a/events.html
+++ b/events.html
@@ -131,7 +131,7 @@
         <div class="content">
           <h3>March</h3>
           <h4>Sports Games/Cricket Holler</h4>
-          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected ?lbs of food for Needy Baskets food pantry.</p>
+          <p></p>
           <a href="#gallery3" onclick="renderEventPhotos3(SG25)">Click here to see photos</a>
         </div>
         <a href="https://www.facebook.com/pages/Cricket-Holler-Boy-Scout-Camp/171675552896093">
@@ -145,7 +145,7 @@
           <h3>April</h3>
           <h4>Hiking and Backpacking/Twin Valley</h4>
           <p></p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(HIKE25)">Click here to see photos</a>
         </div>
         <a href="https://www.metroparks.org/twin-valley-welcome-center/">
           <div class="eventImg">
@@ -155,23 +155,36 @@
       </div>
       <div class="right">
         <div class="content">
-          <h3>May</h3>
-          <h4>Aviation/TBD</h4>
+          <h3>April</h3>
+          <h4>Healthy Kids Day/YMCA Robinson Branch</h4>
           <p></p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(HK25)">Click here to see photos</a>
         </div>
-        <a href="">
+        <a href="https://miamicountyymca.net/">
           <div class="eventImg">
-            <img src="./assets/images/to-be-named.JPG" alt="">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
           </div>
         </a>
       </div>
       <div class="left">
         <div class="content">
           <h3>May</h3>
+          <h4>Aviation/Grimes Airfield</h4>
+          <p></p>
+          <a href="#gallery3" onclick="renderEventPhotos3(AV25)">Click here to see photos</a>
+        </div>
+        <a href="">
+          <div class="eventImg">
+            <img src="./assets/images/Grimes.jfif" alt="">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>May</h3>
           <h4>Memorial Day Weekend/Tipp City</h4>
           <p>On Saturday the scouts place flags on the graves of veterans at Maple Hill Cemetery. On Monday the scouts participate in the Memorial Day parade.</p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(MD25)">Click here to see photos</a>
         </div>
         <a href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/">
           <div class="eventImg memorial">
@@ -179,7 +192,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>June</h3>
           <h4>Summer Camp/Summit Bechtel Reserve</h4>
@@ -197,20 +210,20 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>July</h3>
-          <h4>Paddle Sports/TBD</h4>
+          <h4>Paddle Sports/Birch Bark Canoe Livery</h4>
           <p></p>
           <a href="#gallery3" onclick="renderEventPhotos3()">Click here to see photos</a>
         </div>
         <a href="">
           <div class="eventImg">
-            <img src="./assets/images/to-be-named.JPG" alt="">
+            <img src="./assets/images/events/canoe.jpg" alt="">
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>July</h3>
           <h4>Court of Honor/YMCA Miami County - Robinson Branch</h4>
@@ -223,7 +236,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>August</h3>
           <h4>Fishing/Chenoweth Trails</h4>
@@ -236,7 +249,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -249,7 +262,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>October</h3>
           <h4>Shooting Sports/Camp Friedlander</h4>
@@ -262,7 +275,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>November</h3>
           <h4>Blacksmithing/TBD</h4>
@@ -271,11 +284,11 @@
         </div>
         <a href="">
           <div class="eventImg">
-            <img src="./assets/images/to-be-named.JPG" alt="">
+            <img src="./assets/images/events/blacksmith.webp" alt="">
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/Miami County YMCA - Robinson Branch</h4>
