--- a/merit-badge-counselors.html
+++ b/merit-badge-counselors.html
@@ -58,6 +58,62 @@
     </section>
     <section class="merit">
       <div class="counselor">
+        <h3>Jim Ridgeway</h3>
+        <ul>
+          <li>Cooking</li>
+          <li>Wilderness Survival</li>
+          <li>Astronomy</li>
+          <li>Camping</li>
+          <li>Chemistry</li>
+          <li>Citizenship in Society</li>
+          <li>Composite Materials</li>
+          <li>Digital Tech</li>
+          <li>Emergency Preparedness</li>
+          <li>Environmental Science</li>
+          <li>First Aid</li>
+          <li>Fish and Wildlife Management</li>
+          <li>Fishing</li>
+          <li>Fly Fishing</li>
+          <li>Golf</li>
+          <li>Nuclear Science</li>
+          <li>Scout Heritage</li>
+          <li>Sustainability</li>
+        </ul>
+      </div>
+      <div class="counselor">
+        <h3>David Toro</h3>
+        <ul>
+          <li>Bugling</li>
+          <li>Camping</li>
+          <li>Communication</li>
+          <li>Emergency Preparedness</li>
+          <li>Family ife</li>
+          <li>First Aid</li>
+          <li>Gardening</li>
+          <li>Health Care Professions</li>
+          <li>Music</li>
+          <li>Personal Fitness</li>
+          <li>Public Health</li>
+          <li>Safety</li>
+          <li>Scholarship</li>
+        </ul>
+      </div>
+      <div class="counselor">
+        <h3>Glen Luersman</h3>
+        <ul>
+          <li>Fishing</li>
+          <li>Fly Fishing</li>
+          <li>Fish and Wildlife Management</li>
+          <li>Automotive Maintenance</li>
+          <li>Disabilities Awareness</li>
+          <li>Family Life</li>
+          <li>Home Repairs</li>
+          <li>Traffic Safety</li>
+          <li>Truck Transportation</li>
+          <li>Woodworking</li>
+        </ul>
+      </div>
+      <div class="counselor">
         <h3>Andy Luersman</h3>
         <ul>
           <li>Cooking</li>
@@ -67,18 +123,6 @@
           <li>Orienteering</li>
           <li>Sports</li>
           <li>Sustainability</li>
-          <li>Woodworking</li>
-        </ul>
-      </div>
-      <div class="counselor">
-        <h3>Glen Luersman</h3>
-        <ul>
-          <li>Automotive Maintenance</li>
-          <li>Disabilities Awareness</li>
-          <li>Family Life</li>
-          <li>Home Repairs</li>
-          <li>Traffic Safety</li>
-          <li>Truck Transportation</li>
           <li>Woodworking</li>
         </ul>
       </div>
@@ -114,30 +158,7 @@
           <li>Personal Management</li>
           <li>Wilderness Survival</li>
         </ul>
-      </div>
-      <div class="counselor">
-        <h3>Jim Ridgeway</h3>
-        <ul>
-          <li>Cooking</li>
-          <li>Wilderness Survival</li>
-          <li>Astronomy</li>
-          <li>Camping</li>
-          <li>Chemistry</li>
-          <li>Citizenship in Society</li>
-          <li>Composite Materials</li>
-          <li>Digital Tech</li>
-          <li>Emergency Preparedness</li>
-          <li>Environmental Science</li>
-          <li>First Aid</li>
-          <li>Fish and Wildlife</li>
-          <li>Fishing</li>
-          <li>Fly Fishing</li>
-          <li>Golf</li>
-          <li>Nuclear Science</li>
-          <li>Scout Heritage</li>
-          <li>Sustainability</li>
-        </ul>
-      </div>
+      </div>  
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
