--- a/photos.html
+++ b/photos.html
@@ -67,6 +67,16 @@
         <a href="#gallery2" onclick="renderPhotos2(ER25)">Escape Room</a>
         <a href="#gallery2" onclick="renderPhotos2(SFF25)">Scouting For Food</a>
         <a href="#gallery2" onclick="renderPhotos2(SG25)">Sports Games</a>
+        <a href="#gallery2" onclick="renderPhotos2(HIKE25)">Hiking/Backpacking</a>
+        <a href="#gallery2" onclick="renderPhotos2(HK25)">Healthy Kids Day</a>
+        <a href="#gallery2" onclick="renderPhotos2(AV25)">Aviation</a>
+        <a href="#gallery2" onclick="renderPhotos2(MD25)">Memorial Day</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 0</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 1</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 2</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 3</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 4</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 5</a>
       </div>
     <section class="main">
       <div class="gallery" id="gallery2"></div>       
