--- a/troop-roster.html
+++ b/troop-roster.html
@@ -61,6 +61,7 @@
         <a href="#cards" onclick="createCards(wetBandits)">Wet Bandits Patrol</a>
         <a href="#cards" onclick="createCards(fireChickens)">Fire Chickens Patrol</a>
         <a href="#cards" onclick="createCards(turtles)">Turtles Patrol</a>
+        <a href="#cards" onclick="createCards(nuggies)">Dino Nuggies Patrol</a>
         <a href="#cards" onclick="createCards(scoutMasters)">Assistant Scoutmasters</a>
         <a href="#cards" onclick="createCards(committee)">Committee Members</a>
       </div>
