--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -164,7 +164,7 @@
       </div>
       <div>
         <h3>2022</h3>
-        <p>Gavyn M.</p>
+        <p>Gavyn Mullins</p>
       </div>
       <div>
         <h3>2023</h3>
