--- a/resources.html
+++ b/resources.html
@@ -73,6 +73,7 @@
           <a href="./assets/docs/parol_box_checklist.pdf">Patrol Box Checklist</a>
           <a href="./assets/docs/Court_of_Honor_Script.pdf">Court of Honor Script</a>
           <a href="./assets/docs/Scoutmaster-Conference-Preparation.pdf">Scoutmaster Conference Sheet</a>
+          <a href="./assets/docs/QMbook.pdf">Quartermaster Book Sheets</a>
         </div>
       </div>
     </section>
