displayed Adopt a Mum

--- a/events.html
+++ b/events.html
@@ -197,12 +197,7 @@
           <h3>June</h3>
           <h4>Summer Camp/Summit Bechtel Reserve</h4>
           <p>This years summer camp will be held at Summit Bechtel Reserve National Scout Camp in Glen Jean, WV. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends.</p>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 0 photos</a>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 1 photos</a>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 2 photos</a>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 3 photos</a>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 4 photos</a>
-          <a href="#gallery3" onclick="renderEventPhotos3()">Click Here For Day 5 photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(SC25)">Click here to see photos</a>
         </div>
         <a href="https://www.summitbsa.org/">
           <div class="eventImg">
