--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
             *Note: online orders will include a $1 convenience fee for processing.
           </span>
         </p>
-        <a class="button" href="./assets/docs/Mum-Door-Flyer-2023.pdf">Adopt-a-Mum PDF Form</a>
-        <a class="button-new" href="https://tippmumfestival.org/adopt-a-mum-payment-form/">NEW! Adopt-a-Mum ONLINE ORDER FORM</a>
+        <a class="button" href="https://tippcitymumfestival.com/adopt-a-mum-boy-scout-troop-586/">Adopt-a-Mum Orders</a>
       </div>
     </section>
     <section class="store">
