--- a/photos.html
+++ b/photos.html
@@ -71,12 +71,9 @@
         <a href="#gallery2" onclick="renderPhotos2(HK25)">Healthy Kids Day</a>
         <a href="#gallery2" onclick="renderPhotos2(AV25)">Aviation</a>
         <a href="#gallery2" onclick="renderPhotos2(MD25)">Memorial Day</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 0</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 1</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 2</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 3</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 4</a>
-        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp Day 5</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Summer Camp</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Canoeing</a>
+        <a href="#gallery2" onclick="renderPhotos2()">Fishing</a>
       </div>
     <section class="main">
       <div class="gallery" id="gallery2"></div>       
