displayed troop store

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <img id="logo" src="./assets/images/Troop_Store/troop_shirt.png" alt="troop 586 shirt with logo">
           <img id="soup" src="./assets/images/Troop_Store/troop_hoodie.png" alt="troop shirt with Soup The Turtle">
         </div>
-        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open until March 31st. Orders will be picked up by Mr. Luersman (Glen) once they are all completed. Please select pickup at checkout not delivery.</p>
+        <p id="text">Troop families, our Troop Gear Store is open for orders. The store will remain open until September 30th. Orders will be picked up by Mary Cochling once they are all completed. Please select pickup at checkout not delivery.</p>
         <div id="hat">
           <img id="" src="./assets/images/Troop_Store/troop_hat.png" alt="troop hat with logo">
           <img id="" src="./assets/images/Troop_Store/troop_brim.png" alt="troop brim hat with logo">
