added 2 eagle scouts

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -175,6 +175,11 @@
         <p>Joseph Eastep</p>
         <p>William Kaufman</p>
       </div>
+      <div>
+        <h3>2025</h3>
+        <p>Logan Grubbs</p>
+        <p>Christopher Luersman</p>
+      </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
