--- a/events.html
+++ b/events.html
@@ -196,8 +196,9 @@
         <div class="content">
           <h3>June</h3>
           <h4>Summer Camp/Summit Bechtel Reserve</h4>
-          <p>This years summer camp will be held at Summit Bechtel Reserve National Scout Camp in Glen Jean, WV. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends.</p>
-          <a href="#gallery3" onclick="renderEventPhotos3(SC25)">Click here to see photos</a>
+          <p>This years summer camp will be held at Summit Bechtel Reserve National Scout Camp in Glen Jean, WV. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends. This year a select group of our scouts will be participating in the Summit Experience High Adventure Camp.</p>
+          <a href="#gallery3" onclick="renderEventPhotos3(SC25)">Click here to see Summer Camp photos</a>
+          <a href="#gallery3" onclick="renderEventPhotos3(SE25)">Click here to see Summit Experience photos</a>
         </div>
         <a href="https://www.summitbsa.org/">
           <div class="eventImg">
